--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,10 @@ services:
 
   client:
     build: ./client
-    ports: 1234:1234
+    ports: 
+      - 1234:1234
 
   server:
     build: ./server
-    ports: 3000:3000
+    ports: 
+      - 3000:3000
