--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start-dev": "nodemon server.js",
-    "start": "node server.js"
+    "start": "node server.js",
+    "seed": "cd db && node seed.js"
   },
   "keywords": [],
   "author": "",
@@ -15,7 +16,10 @@
     "chalk": "5.0.1",
     "cors": "2.8.5",
     "express": "4.18.1",
-    "morgan": "1.10.0"
+    "morgan": "1.10.0",
+    "pg": "^8.12.0",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.37.3"
   },
   "devDependencies": {
     "nodemon": "2.0.19"
